BugId: 98455, add word wrapping for text in lists and tables for subcategories and pages

--- a/skins/wikia/shared.css
+++ b/skins/wikia/shared.css
@@ -445,10 +445,15 @@ div.main-page-tag-lcs-exploded {
 	position: relative;
 }
 
-/* Word wrapping for text in tables */
-#mw-subcategories .table,
-#mw-pages .table {
+/* Word wrapping for text in pages and subcategories lists and tables  */
+#mw-subcategories table,
+#mw-pages table {
     table-layout: fixed;
+    word-wrap: break-word;
+}
+#mw-subcategories li,
+#mw-pages li {
+    width: 100%;
     word-wrap: break-word;
 }
 
